# rest_with_flask

./: .flaskenv  Dockerfile  Dockerfile_without_mounting  Insomnia_2023-01-25.json  app.py  pyproject.toml  readme.md  run.py
hello_world/: app.py
simple_store/: readme.md
simple_store/src/: .flaskenv  app.py
src/: .flaskenv  __init__.py  schemas.py
src/models/: __init__.py  item.py  item_tags.py  store.py  tag.py  user.py
src/resources/: item.py  store.py  tag.py  user.py
tests/: conftest.py  test_item.py  test_store.py
