[tool.poetry]
name = "simple-store"
version = "0.1.0"
description = ""
authors = ["omasters <contact@olivermasters.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-smorest = "^0.40.0"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
app = "python -m run"
test = "where.exe python"
flask = "flask run --host 0.0.0.0"
